# mh-python-concepts

./: .gitignore  LICENSE  README.md  pyproject.toml
Classes/intro/: 01_introduction.ipynb  02_class_vs_instance.ipynb  example.py
SQL_intro/intro/raw_sql/: README.md  db.py  export_and_use.ipynb  init_db.py  playground.ipynb  schema.sql
SQL_intro/intro/sqlalchemy/: db.py  init_db.py  models.py  playground_jupy.ipynb
