[project]
name = "mh-python-concepts"
version = "0.1.0"
description = "Concept-first exploration of Python language features and design patterns"
requires-python = ">=3.11"

authors = [
    { name = "mahaeu" }
]

license = { file = "LICENSE" }

dependencies = [
    "jupyterlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "jupytext>=1.15",
]


[tool.setuptools]
packages = []


[project.urls]
Homepage = "https://github.com/mahaeu"
Repository = "https://github.com/mahaeu/mh-python-concepts"
